fix(pgr): create independent onboarding roots